--- a/Independent Study Final/JAVASCRIPT Pong/pongop.html
+++ b/Independent Study Final/JAVASCRIPT Pong/pongop.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Pong</title>
-	<link href="..\baseCSS.css"
+	<link href="..\secondarycode\baseCSS.css"
 	rel="stylesheet">
 	<div class="game">
 	<script src="pong1p.js" type="text/javascript"></script>
@@ -12,18 +12,18 @@
 <body bgcolor="#32CD32">
 <p></p>
 <div class="plyrslc">
-	<a href="..\pong.html">
+	<a href="..\secondarycode\pong.html">
 	Back to Player Select
 </div>
 
 <div class="back">
-	<a href="..\javascriptHTML.html">
+	<a href="..\secondarycode\javascriptHTML.html">
 	Back to JavaScript
 </a>
 </div>
 
 <div class="menu">
-	<a href="..\baseHTML.html">
+	<a href="..\secondarycode\baseHTML.html">
 	Back to Menu
 </a>
 </div>
