--- a/Independent Study Final/JAVASCRIPT Pong/pongtp.html
+++ b/Independent Study Final/JAVASCRIPT Pong/pongtp.html
@@ -13,12 +13,12 @@
 <p></p>
 
 <div class="plyrslc">
-	<a href="..\pong.html">
+	<a href="..\secondarycode\pong.html">
 	Back to Player Select
 </div>
 
 <div class="back">
-	<a href="..\javascriptHTML.html">
+	<a href="..\secondarycode\javascriptHTML.html">
 	Back to JavaScript
 </a>
 </div>
