--- a/Independent Study Final/JAVASCRIPT Pong/pongop.html
+++ b/Independent Study Final/JAVASCRIPT Pong/pongop.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Pong</title>
-	<link href="..\secondarycode\baseCSS.css"
+	<link href="..\baseCSS.css"
 	rel="stylesheet">
 	<div class="game">
 	<script src="pong1p.js" type="text/javascript"></script>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="menu">
-	<a href="..\secondarycode\baseHTML.html">
+	<a href="..\baseHTML.html">
 	Back to Menu
 </a>
 </div>
