--- a/Independent Study Final/JAVASCRIPT Pong/pongop.html
+++ b/Independent Study Final/JAVASCRIPT Pong/pongop.html
@@ -12,7 +12,7 @@
 <body bgcolor="#32CD32">
 <p></p>
 <div class="plyrslc">
-	<a href="..\secondarycode\pong.html">
+	<a href="..\JAVASCRIPT Pong\pong.html">
 	Back to Player Select
 </div>
 
