--- a/Independent Study Final/JAVASCRIPT Pong/pongtp.html
+++ b/Independent Study Final/JAVASCRIPT Pong/pongtp.html
@@ -13,7 +13,7 @@
 <p></p>
 
 <div class="plyrslc">
-	<a href="..\secondarycode\pong.html">
+	<a href="..\JAVASCRIPT Pong\pong.html">
 	Back to Player Select
 </div>
 
